# art_of_war_rag

./: .gitignore  README.md  main.py  pyproject.toml
assets/: art_of_war_for_rag.txt  chunks.csv  chunks.json  entities.csv  entities.json  historical_figures.txt  notes.txt  rare_terms.csv
eval/: batch_config.yaml  create_langfuse_dataset.py  evaluators.py  pipeline.py  report.py  run_langfuse.py  runner.py
eval/data/: queries.jsonl  rare_terms_common.json  rare_terms_medium.json  rare_terms_rare.json
neo4j/scripts/: create_schema.py  load_entities.py
src/: chunker.py  csv_refactor.py  db_pool.py  embeddings_generator.py  interface.py  main.py  query.py  reformat_json_to_csv.py  retriever.py  setup_db.py  setup_vector_db.py  spacy_helper.py  vector_retriever.py
src/neo4j/scripts/: create_schema.py  graph_retriever.py  load_entities.py  retriever.py
