[tool.poetry]
name = "art-of-war"
version = "0.1.0"
description = "a chatbot to interact with the Art of War"
authors = ["Saul Thompson saulthomp@outlook.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"
numpy = "^2.3.1"
openai = "^1.93.3"
langchain-openai = "^0.3.27"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
langchain-experimental = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
